   One can select any row of the listview and click a button on the dialog labeled 'Edit Control' and it will place
   that table object into the 'Properties' editor dialog for you.

FIXES:

- fix 0-scaled rubber crash (like it can happen if invalid UI-inputs like 'Scale' are mapped to 0)

- note that the support for ancient windows versions (e.g. Windows XP) for the DX9 build has been removed in order to be able to use newer compilers
- due to this, VPX now allows to use the C++20 language feature set, which means that the windows build system requires Visual Studio 2019 or newer

- SDL2 code was updated and modernized to SDL3

- the BASS sound engine was replaced/unified with SDL3(_mixer)

- DirectX 8 port for input handling (currently disabled)

- see Changelog_Scripts.txt for the respective core script changes (version 3.62)
- see CommandReference.txt for the changelog of all the scripting properties/interface changes
- see Scripts.txt for the actual usage and "documentation" of the scripts that come with VPX

VP 10.8.0 Changelog
------------------------

FEATURES:

- VPX and VPVR are finally reunited!
  So, similar to the VP9.9 release, this pretty much rearchitects VPs whole rendering pipeline, but still allows to play all tables with (hopefully) pretty much the same look and feel.
  Some of the changes that came in via VPVR:

  - added SDL2 / OpenGL / OpenGLES as an additional render pipeline.
    switching between DirectX 9 and OpenGL is (for now) only possible at compile time, thus two executables are shipped.

  - the new OpenGL pipeline is also capable to render to VR devices (support for SteamVR):
    To use VR you need a SteamVR compatible HMD, a Steam account, and the Steam client/app
    with SteamVR client installed. More information on OpenVR + SteamVR can be found on http://steamvr.com
    You may also want to check out OpenComposite, as it seems to provide a performance boost for some users.
